# ProyectoEstru2

./: CMakeLists.txt  HeartBar.h  Maze.h  Quiz.h  aula.cpp  aula.h  combatenivel3.cpp  combatenivel3.h  escuela.cpp  escuela.h  gamesession.cpp  gamesession.h  laboratorio.cpp  laboratorio.h  lobby.cpp  lobby.h  locksprite.cpp  locksprite.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapa.cpp  mapa.h  mazeloader.cpp  mazeloader.h  minigamearte.cpp  minigamearte.h  minijuegociencia.cpp  minijuegociencia.h  minijuegohistoria.cpp  minijuegohistoria.h  minijuegopolitica.cpp  minijuegopolitica.h  nivel1.cpp  nivel1.h  nivel3combate.cpp  nivel3combate.h  personaje.cpp  personaje.h  (+8 more)
Assets/: Nivel1.unknown
Assets/mazes/: maze_with_5_doors.csv
